// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab should render set badge correctly 1`] = `
<div class="fx-tab-bar fx-horizontal-hairline">
  <ul class="fx-tab-bar_list">
    <li class="fx-tab-bar_item active">
      <badge-stub content="热" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab-bar_item-icon"></badge-stub><span class="fx-tab-bar_item-text">首页</span>
    </li>
    <li class="fx-tab-bar_item">
      <badge-stub content="1" maxcount="99" dot="true" showzero="false" animated="false" offset="0,0" class="fx-tab-bar_item-icon"></badge-stub><span class="fx-tab-bar_item-text">搜索</span>
    </li>
    <li class="fx-tab-bar_item">
      <badge-stub content="1" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab-bar_item-icon"></badge-stub><span class="fx-tab-bar_item-text">我的</span>
    </li>
    <li class="fx-tab-bar_item">
      <badge-stub content="100" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab-bar_item-icon"></badge-stub><span class="fx-tab-bar_item-text">设置</span>
    </li>
  </ul>
</div>
`;

exports[`Tab should render set options correctly 1`] = `
<div class="fx-tab-bar fx-horizontal-hairline">
  <ul class="fx-tab-bar_list">
    <li class="fx-tab-bar_item active">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab-bar_item-icon"></badge-stub><span class="fx-tab-bar_item-text">首页</span>
    </li>
    <li class="fx-tab-bar_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab-bar_item-icon"></badge-stub><span class="fx-tab-bar_item-text">搜索</span>
    </li>
    <li class="fx-tab-bar_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab-bar_item-icon"></badge-stub><span class="fx-tab-bar_item-text">我的</span>
    </li>
    <li class="fx-tab-bar_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab-bar_item-icon"></badge-stub><span class="fx-tab-bar_item-text">设置</span>
    </li>
  </ul>
</div>
`;
